--- a/style.css
+++ b/style.css
@@ -327,6 +327,14 @@ footer {
     display: flex;
     flex-direction: column;
   }
+  .header-text {
+    font-size: 35px;
+  }
+  .header-pic img {
+    width: 400px;
+    height: 300px;
+    padding-left: 85px;
+  }
   .total-players {
     display: flex;
     flex-direction: column;
@@ -334,6 +342,17 @@ footer {
   .highlights {
     display: flex;
     flex-direction: column;
+  }
+  .highilights-details h1 {
+    font-size: 35px;
+  }
+  .highilights-details {
+    margin-left: 30px;
+  }
+  .highlights-img img {
+    width: 400px;
+    height: 300px;
+    margin-left: 0px;
   }
   #h-btn {
     margin-bottom: 35px;
@@ -347,5 +366,9 @@ footer {
     justify-content: center;
     align-items: center;
     row-gap: 15px;
+  }
+  .logo img {
+    width: 300px;
+    height: 100px;
   }
 }
